# math-jackbox

./: LICENSE  README.md  pom.xml
backend/: main.py  pyproject.toml
frontend/: current-question.json  index.html
frontend/style/: styles.css
src/main/java/com/quiz/backend/: QuizMathApplication.java
src/main/java/com/quiz/backend/config/: WebSocketConfig.java
src/main/java/com/quiz/backend/controller/: QuizController.java
src/main/java/com/quiz/backend/dto/: AnswerDTO.java  QuestionDTO.java
src/main/java/com/quiz/backend/model/: Player.java  Question.java
src/main/java/com/quiz/backend/service/: QuizService.java
src/main/resources/: application.properties
src/main/resources/static/: GameTest.html
src/test/java/com/quiz/backend/: QuizMathApplicationTests.java
